finalizing changes and adding first post

--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,7 @@ permalink:        pretty
 
 # Setup
 title:            Roberto Pedroso
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:      'A student, hacker and philosopher who likes making software, <a href="http://minecraft.net" target="_blank">playing games</a> and reading books.'
 url:              http://rpedroso.com
 
 author:
