--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Dependencies
 markdown:         redcarpet
-pygments:         true
+highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
@@ -9,6 +9,9 @@ permalink:        pretty
 title:            Roberto Pedroso
 description:      'A student, hacker and philosopher who likes making software, <a href="http://minecraft.net" target="_blank">playing games</a> and reading books.'
 url:              http://rpedroso.com
+
+# Use Github markdown
+input: GFM
 
 author:
   name:           'Roberto Pedroso'
