better self description

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 
 # Setup
 title:            Roberto Pedroso
-description:      'A hacker, geek and philosopher who likes making software, <a href="http://minecraft.net" target="_blank">playing games</a> and reading books.'
+description:      'A hacker, geek and philosopher who likes appsec, <a href="http://minecraft.net" target="_blank">playing games</a> and reading <a href="http://www.amazon.com/After-Virtue-Study-Theory-Edition/dp/0268035040" target="_blank">books</a>.'
 url:              http://rpedroso.com
 
 # Use Github markdown
