cleaning up syntax errors

--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,12 @@ permalink:        pretty
 
 # Setup
 title:            Roberto Pedroso
-description:      'University of Chicago graduate with a degree in <a href="http://philosophy.uchicago.edu/">nerdiness</a>. A hacker and geek who lives appsec, arguments about AI and <a href="http://minecraft.net" target="_blank">playing games</a>.
+description:      'University of Chicago graduate with a degree in <a href="http://philosophy.uchicago.edu/">nerdiness</a>. A hacker and geek who lives appsec, arguments about AI and <a href="http://minecraft.net" target="_blank">playing games</a>.'
 url:              http://rpedroso.com
 
 # Use Github markdown
 kramdown:
-    input: GFM
+  input:          GFM
 
 author:
   name:           'Roberto Pedroso'
