--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ title:            Roberto Pedroso
 description:      'University of Chicago graduate with a degree in <a href="http://philosophy.uchicago.edu/">nerdiness</a>. A hacker and geek who lives appsec, arguments about AI and <a href="http://minecraft.net" target="_blank">playing games</a>.'
 url:              http://rpedroso.com
 
+# Use GFM
+kramdown:
+  input:         GFM
+
 author:
   name:           'Roberto Pedroso'
   email:          roberto@rpedroso.com
